--- a/hdfs/templates/hadoop-nn-exporter-configfile.yml
+++ b/hdfs/templates/hadoop-nn-exporter-configfile.yml
@@ -1,3 +1,4 @@
+{{- if .Values.prometheus.exporter.enabled }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -15,5 +16,4 @@ data:
     skipFileDistributionForPathStats : false
     skipFileDistributionForPathSetStats : false
     fileSizeDistributionBuckets: ['0','1MiB', '32MiB', '64MiB', '128MiB', '1GiB', '10GiB']
-
-
+{{- end }}
